Fixed overflow

--- a/src/app.css
+++ b/src/app.css
@@ -605,6 +605,7 @@ a:hover {
 }
 
 .entity-table td {
+  overflow: hidden;
   vertical-align: middle;
 }
 
